src/components/ProductCard/ProductCard.module.css
.productCardContainer {
  display: flex;
  flex-direction: row;
  width: 100%;
  box-sizing: border-box;
  box-shadow: 0 2px 8px rgba(0,0,0,0.08);
}

.productCardImage {
  width: 250px;
  height: 250px;
  border-radius: 10px 0 0 10px;
}

.productCardInfo {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  justify-content: space-between;
  flex: 1 1 0;
  padding: 6px 20px;
  background-color: white;
  border-radius: 0 10px 10px 0;
}

.productName {
  margin-top: 0px;
  font-size: 26px;
  color: black;
}

.productPrice {
  font-size: 18px;
  color: black;
}

